# job-gap-assistant

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  main.py  schemas.py
app/services/: __init__.py  analyzer.py  openai_client.py
frontend/: index.html  main.js  style.css
job_gap_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_analyzer.py
